Add a changes in url api

--- a/src/app/components/dashboard/navbar/navbar.component.css
+++ b/src/app/components/dashboard/navbar/navbar.component.css
@@ -8,8 +8,8 @@ nav {
     align-items: center;
     background-color: #d5e2d49f;
     padding: 13px;
-    width: calc(100% - 7vw);
-    margin-left: 5vw;
+    width: calc(100% - 6.5vw);
+    margin-left: auto;
     
   }
   
