--- a/src/app/components/dashboard/history-calendar/history-calendar.component.css
+++ b/src/app/components/dashboard/history-calendar/history-calendar.component.css
@@ -12,15 +12,16 @@ body {
 
 /* Calendario */
 .calendar-container {
+  margin-top: 3%;
+  margin-left:10px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   box-sizing: border-box;
   width: 70%;
-  height: 90%;
+  height: 100%;
   background-color: #ffffff00;
   border-radius: 10px;
-  padding-top: 10%;
 }
 
 /* Imagen del mes */
@@ -31,7 +32,7 @@ body {
 
 .month-img-bg {
   width: 100%;
-  height: 452px;
+  height: 735px;
   background-repeat: no-repeat;
   background-color: #00000011;
   background-size: contain; /* Ajusta la imagen al 50% del tamaño del contenedor */
