add a new route

--- a/src/app/components/dashboard/profile/profile.component.html
+++ b/src/app/components/dashboard/profile/profile.component.html
@@ -47,7 +47,7 @@
         class="editable"
         [disabled]="!isEditable"
         type="tel"
-        [(ngModel)]="user.cellphone"
+        [(ngModel)]="user.phone"
         placeholder="Teléfono: "
       />
     </div>
