--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,12 +5,12 @@
       <p *ngIf="errorMessage" class="msg-err">{{ errorMessage }}</p>
     </div>    
     <div>
-      <label for="email">Correo Electrónico</label>
-      <input type="email" [(ngModel)]="email" name="email" required />
+      <label for="username">Nombre de usuario: </label>
+      <input type="text" [(ngModel)]="username" name="username" required />
     </div>
     <div>
       <div class="lav">
-        <label for="password">Contraseña</label>
+        <label for="password">Contraseña: </label>
         <div class="forgot-password">
           <a class="fpass" routerLink="/register">Olvide mi contraseña</a>
         </div>
