--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -17,6 +17,7 @@
       [dashboard]="dashboard"
       [history]="history"
       [about]="about"
+      (logoutEvent)="logout()"
     ></app-main>
 
     <!-- Overlay opcional -->
