--- a/src/app/components/dashboard/profile/profile.component.html
+++ b/src/app/components/dashboard/profile/profile.component.html
@@ -24,7 +24,7 @@
         class="editable"
         [disabled]="!isEditable"
         type="text"
-        [(ngModel)]="user.lastname"
+        [(ngModel)]="user.lastName"
         placeholder="Apellido(s): "
       />
       <input
