--- a/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -59,7 +59,7 @@
       <div class="routes logout" data-tooltip="Cerrar Sesión">
         <button class="item logout"></button>
         <div class="link-content">
-          <a routerLink="/logout">Cerrar Sesión</a>
+          <a (click)="logout()" >Cerrar Sesión</a>
         </div>
       </div>
     </div>
