--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -11,7 +11,7 @@
       </div>
       <div>
         <label for="lastname">Apellido: </label>
-        <input type="text" [(ngModel)]="lastname" name="lastname" required />
+        <input type="text" [(ngModel)]="lastName" name="lastname" required />
       </div>
     </div>
     <!---------------------------------------------------------------------->
@@ -58,4 +58,4 @@
     <p>¿Tienes una cuenta? <a (click)="goToLogin()">Inicia Sesión</a></p>
   </form>
 </div>
-<router-outlet></router-outlet>
+
