--- a/src/app/components/dashboard/main/main.component.html
+++ b/src/app/components/dashboard/main/main.component.html
@@ -17,8 +17,8 @@
       <h1>{{visits}}</h1>
     </div>
     <div class="div5">
-      <h2>Accesos</h2><br>
-      <h1>{{access2}}</h1>
+      <h2>Notificaciones</h2><br>
+      <h1>{{notifications}}</h1>
     </div>
   </div>
 </div>
