--- a/src/app/components/dashboard/tables/table1/table1.component.html
+++ b/src/app/components/dashboard/tables/table1/table1.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto p-4">
-  <h2 *ngIf="isLoading" class="text-lg font-bold mb-4">Por favor espere unos segundos</h2>
+  <h2 *ngIf="isLoading" class="text-lg font-bold mb-4">Por favor espere </h2>
 
   <!-- Cargando -->
   <div *ngIf="isLoading" class="text-center">Cargando...</div>
