--- a/src/app/components/dashboard/profile/profile.component.html
+++ b/src/app/components/dashboard/profile/profile.component.html
@@ -30,7 +30,7 @@
       <input
         class="editable"
         [disabled]="!isEditable"
-        type="date"
+        type="datetime"
         [(ngModel)]="user.dob"
         placeholder="Fecha de Nacimiento: "
       />
