--- a/src/app/components/dashboard/history-calendar/history-calendar.component.css
+++ b/src/app/components/dashboard/history-calendar/history-calendar.component.css
@@ -15,8 +15,9 @@ body {
   margin-top: 3%;
   margin-left:10px;
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
+  align-items: stretch;
   box-sizing: border-box;
   width: 70%;
   height: 100%;
@@ -24,27 +25,18 @@ body {
   border-radius: 10px;
 }
 
-/* Imagen del mes */
-.calendar-image {
-  width: 30%;
-  max-width: 350px;
-}
-
 .month-img-bg {
-  width: 100%;
-  height: 735px;
+  flex: 1;
+  width: 30%;
+  height: 75%;
   background-repeat: no-repeat;
   background-color: #00000011;
-  background-size: contain; /* Ajusta la imagen al 50% del tamaño del contenedor */
+  background-size: contain; 
   background-position: center;
   border-radius: 12px 0 0 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   background: url(../../../assets/months/april.png);
-}
-
-/* Calendario visual */
-.calendar-view {
-  width: 70%;
+  min-height: 400px;
 }
 
 /* FullCalendar estilos */
@@ -87,8 +79,8 @@ body {
 
 /* Ajuste del contenedor del calendario */
 full-calendar {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 75%;
   box-sizing: border-box;
   margin: 0; /* centrar horizontalmente */
   display: block;
