--- a/src/app/components/dashboard/tables/table1/table1.component.html
+++ b/src/app/components/dashboard/tables/table1/table1.component.html
@@ -1,24 +1,24 @@
-<div class="container mx-auto p-4">
-  <h2 *ngIf="isLoading" class="text-lg font-bold mb-4">Por favor espere </h2>
+<div class="container">
+  <h2 *ngIf="isLoading">Por favor espere</h2>
 
   <!-- Cargando -->
-  <div *ngIf="isLoading" class="text-center">Cargando...</div>
+  <div *ngIf="isLoading">Cargando...</div>
 
   <!-- Error -->
-  <div *ngIf="errorMessage" class="text-red-500">{{ errorMessage }}</div>
+  <div *ngIf="errorMessage" style="color: red;">{{ errorMessage }}</div>
 
   <!-- Tabla de datos (Fechas y Usuarios) -->
-  <table *ngIf="!isLoading && !errorMessage" class="w-full border-collapse border border-gray-300">
+  <table *ngIf="!isLoading && !errorMessage" border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
     <thead>
-      <tr class="bg-gray-200">
-        <th class="border border-gray-300 p-2">Fecha</th>
-        <th class="border border-gray-300 p-2">Usuario</th>
+      <tr style="background-color: #f0f0f0;">
+        <th>Fecha</th>
+        <th>Acceso</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of tableData">
-        <td class="border border-gray-300 p-2">{{ item.date }}</td>
-        <td class="border border-gray-300 p-2">{{ item.user }}</td>
+        <td>{{ item.date }}</td>
+        <td>{{ item.access === false ? 'Denegado' : 'Permitido' }}</td>
       </tr>
     </tbody>
   </table>
