--- a/src/app/components/dashboard/tables/table1/table1.component.html
+++ b/src/app/components/dashboard/tables/table1/table1.component.html
@@ -8,7 +8,8 @@
   <div *ngIf="errorMessage" style="color: red;">{{ errorMessage }}</div>
 
   <!-- Tabla de datos (Fechas y Usuarios) -->
-  <table *ngIf="!isLoading && !errorMessage" border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+  <table *ngIf="!isLoading && !errorMessage" border="1" cellpadding="8" cellspacing="0"
+    style="width: 100%; border-collapse: collapse;">
     <thead>
       <tr style="background-color: #f0f0f0;">
         <th>Fecha</th>
@@ -22,4 +23,7 @@
       </tr>
     </tbody>
   </table>
+  <div *ngIf="noRecordsMessage" class="no-records-message">
+    {{ noRecordsMessage }}
+  </div>
 </div>
